--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "hexo-renderer-marked": "^3.3.0",
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
-    "hexo-server": "^2.0.0",
-    "hexo-theme-butterfly": "^4.3.1"
+    "hexo-server": "^2.0.0"
   },
   "scripts": {
     "dev": "hexo server -p $PORT",
