--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: CatBlog
 subtitle:
-description:
-keywords:
-author: John Doe
+description: 你是我永远无法到达的终点
+keywords: Blog,Java,SpringBoot
+author: 猫粮d
 language: zh-CN
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://hexo-sable-pi.vercel.app
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
