--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -3,20 +3,20 @@
 # --------------------------------------
 
 menu:
-  Home: / || fas fa-home
-  Archives: /archives/ || fas fa-archive
-  Tags: /tags/ || fas fa-tags
-  Categories: /categories/ || fas fa-folder-open
-  List||fas fa-list:
-    Music: /music/ || fas fa-music
-    Movie: /movies/ || fas fa-video
-  Link: /link/ || fas fa-link
-  About: /about/ || fas fa-heart
+  首页: / || fas fa-home
+  时间轴: /archives/ || fas fa-archive
+  标签: /tags/ || fas fa-tags
+  分类: /categories/ || fas fa-folder-open
+  #List||fas fa-list:
+    #Music: /music/ || fas fa-music
+    #Movie: /movies/ || fas fa-video
+  #Link: /link/ || fas fa-link
+  #About: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
 # --------------------------------------
 
-highlight_theme: light #  darker / pale night / light / ocean / mac / mac light / false
+highlight_theme: mac #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: true # show the code language
 highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
@@ -50,8 +50,8 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: false
-  preload: false
+  enable: true
+  preload: true
   CDN:
 
 # Math (數學)
@@ -80,19 +80,19 @@ favicon: /img/favicon.png
 
 # Avatar (頭像)
 avatar:
-  img: https://i.loli.net/2021/02/24/5O1day2nriDzjSu.png
+  img: /img/touxiang.jpg
   effect: false
 
-# Disable all banner image
+# 禁用所有横幅图片
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://fastly.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_img/index.jpg
+index_img: /img/index.jpg
 
-# If the banner of page not setting, it will show the top_img
-default_top_img:
+# 如果没有设置页面的banner，会显示top_img
+default_top_img: /img/s1.jpg
 
-# The banner image of archive page
+# 存档页面的横幅图像
 archive_img:
 
 # If the banner of tag page not setting, it will show the top_img
@@ -111,7 +111,7 @@ category_img:
 # The banner image of category page
 # format:
 #  - category name: xxxxx
-category_per_img:
+category_per_img: /img/1.jpg
 
 cover:
   # display the cover or not (是否顯示文章封面)
@@ -123,8 +123,13 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
-
+    - /img/1.jpg
+    - /img/2.jpg
+    - /img/3.jpg
+    - /img/4.jpg
+    - /img/5.jpg
+    - /img/6.jpg
+    - /img/7.jpg
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
   flink: /img/friend_404.gif
@@ -141,7 +146,7 @@ post_meta:
     date_type: created # created or updated or both 主頁文章日期是創建日或者更新日或都顯示
     date_format: date # date/relative 顯示日期還是相對日期
     categories: true # true or false 主頁是否顯示分類
-    tags: false # true or false 主頁是否顯示標籤
+    tags: true # true or false 主頁是否顯示標籤
     label: true # true or false 顯示描述性文字
   post:
     date_type: both # created or updated or both 文章頁日期是創建日或者更新日或都顯示
@@ -153,19 +158,19 @@ post_meta:
 # wordcount (字數統計)
 # see https://butterfly.js.org/posts/ceeb73f/#字數統計
 wordcount:
-  enable: false
+  enable: true
   post_wordcount: true
   min2read: true
   total_wordcount: true
 
 # Display the article introduction on homepage
-# 1: description
-# 2: both (if the description exists, it will show description, or show the auto_excerpt)
-# 3: auto_excerpt (default)
-# false: do not show the article introduction
+# 1: 描述
+# 2: 两者（如果描述存在，它将显示描述，或显示 auto_excerpt）
+# 3: 自动摘录（默认）
+# false: 不显示文章介绍
 index_post_content:
   method: 3
-  length: 500 # if you set method to 2 or 3, the length need to config
+  length: 500 # 如果将方法设置为 2 或 3，则需要配置长度
 
 # anchor
 # when you scroll in post, the URL will update according to header id.
@@ -182,8 +187,9 @@ toc:
   expand: false
   style_simple: false # for post
 
+#版权
 post_copyright:
-  enable: true
+  enable: false
   decode: false
   author_href:
   license: CC BY-NC-SA 4.0
@@ -406,8 +412,8 @@ crisp:
 footer:
   owner:
     enable: true
-    since: 2020
-  custom_text:
+    since: 2022
+  custom_text: Hi, welcome to my <a href="#">blog</a>!
   copyright: true # Copyright of theme and framework
 
 # Analysis
@@ -638,11 +644,12 @@ aside:
     button:
       enable: true
       icon: fab fa-github
-      text: Follow Me
-      link: https://github.com/xxxxxx
+      text: Github
+      link: https://github.com/wxy520
+  #公告
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 所有东西都是写给自己看的 如有问题 请及时联系我
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -681,8 +688,8 @@ busuanzi:
 # Time difference between publish date and now (網頁運行時間)
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
-  enable: false
-  publish_date:
+  enable: true
+  publish_date: 2022/7/26/ 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
@@ -762,8 +769,8 @@ note:
   #  - modern    bs-callout new (v2-v3) alert style.
   #  - flat      flat callout style with background, like on Mozilla or StackOverflow.
   #  - disabled  disable all CSS styles import of note tag.
-  style: flat
-  icons: true
+  style: simple
+  icons: false
   border_radius: 3
   # Offset lighter of background in % for modern and flat styles (modern: -12 | 12; flat: -18 | 6).
   # Offset also applied to label tag variables. This option can work with disabled note tag.
