--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: CatBlog
 subtitle:
 description: 你是我永远无法到达的终点
-keywords: Blog,Java,SpringBoot
+keywords: Blog,Java,SpringBoot,猫猫的blog
 author: 猫粮d
 language: zh-CN
 timezone:
