--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -90,7 +90,7 @@ disable_top_img: false
 index_img: /img/index.jpg
 
 # 如果没有设置页面的banner，会显示top_img
-default_top_img: 
+default_top_img: /img/index.jpg
 
 # 存档页面的横幅图像
 archive_img:
@@ -102,7 +102,7 @@ tag_img:
 # The banner image of tag page
 # format:
 #  - tag name: xxxxx
-tag_per_img:
+tag_per_img: /img/s1.jpg
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
@@ -111,7 +111,7 @@ category_img:
 # The banner image of category page
 # format:
 #  - category name: xxxxx
-category_per_img: /img/1.jpg
+category_per_img:
 
 cover:
   # display the cover or not (是否顯示文章封面)
