--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -84,7 +84,7 @@ avatar:
   effect: false
 
 # 禁用所有横幅图片
-disable_top_img: false
+disable_top_img: true
 
 # The banner image of home page
 index_img: /img/index.jpg
@@ -115,7 +115,7 @@ category_per_img:
 
 cover:
   # display the cover or not (是否顯示文章封面)
-  index_enable: true
+  index_enable: false
   aside_enable: true
   archives_enable: true
   # the position of cover in home page (封面顯示的位置)
