--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -84,7 +84,7 @@ avatar:
   effect: false
 
 # 禁用所有横幅图片
-disable_top_img: true
+disable_top_img: false
 
 # The banner image of home page
 index_img: /img/index.jpg
